--- a/pages/programs.html
+++ b/pages/programs.html
@@ -55,6 +55,7 @@
         .hero h1 {
             font-size: 2.5em;
             font-weight: bold;
+            text-align: center;
         }
         .hero p {
             font-size: 1.2em;
@@ -79,7 +80,7 @@
             padding: 40px 20px;
         }
         .program-card {
-            background-color: #fff;
+            background-color: #gray;
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             padding: 20px;
@@ -119,7 +120,7 @@
             color: white;
             text-align: center;
             font-size: 1.4em;
-            padding: 15px;
+            padding: 10px;
             position: fixed;
             bottom: 0;
             width: 100%;
