--- a/pages/programs.html
+++ b/pages/programs.html
@@ -144,8 +144,8 @@
     <main>
         <section id="programs">
             <div class="container">
-                <h1>🌻 Youth Spring Programs</h1>
-                <p>“Empowering the roots to bloom into the future.”</p>
+              <center>  <h1>🌻 Youth Spring Programs</h1></center>
+               <center> <p>“Empowering the roots to bloom into the future.”</p></center>
 
                 <!-- Programs Grid -->
                 <div class="programs-grid">
