--- a/pages/apply-for-loan.html
+++ b/pages/apply-for-loan.html
@@ -29,13 +29,15 @@
             margin-bottom: 30px;
         }
         .loan-form {
-            background-color: white;
+            background-color: #ffa500; /* Orange background */
             border-radius: 8px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             padding: 30px;
+            text-align: center; /* Centered container */
         }
         .loan-form .form-control {
             margin-bottom: 15px;
+            text-align: left; /* Properly aligned text boxes */
         }
         .loan-form .btn-submit {
             background-color: #ff6600; /* Deep orange */
@@ -61,6 +63,9 @@
 
     <!-- Header -->
     <div id="header">
+        <a href="/" class="btn btn-light">
+            <i class="bi bi-house-door"></i> <!-- Home icon -->
+        </a>
         Youth Spring - Empowering Nigerian Youth
     </div>
 
@@ -70,7 +75,7 @@
         <section id="loan-info">
             <h2 class="section-title">Empowerment Loans Initiative</h2>
             <p class="text-center">
-                The Youth Spring Empowerment Loans Initiative provides interest-free, small-scale startup loans to youth and underprivileged individuals with viable ideas. This program aims to foster entrepreneurship, empower local communities, and create sustainable businesses.
+                The Youth Spring Empowerment Loans Initiative provides interest-free, small-scale startup loans to youth and underprivileged individuals with viable ideas. This program aims to foster economic empowerment and self-sufficiency.
             </p>
             <p class="text-center">
                 <strong>Eligibility Criteria:</strong>
@@ -158,5 +163,6 @@
     </div>
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
 </body>
 </html>
