--- a/pages/apply-for-loan.html
+++ b/pages/apply-for-loan.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get a Loan - Youth Spring</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -63,7 +64,7 @@
 
     <!-- Header -->
     <div id="header">
-        <a href="/" class="btn btn-light">
+        <a href="/" class="btn btn-dark">
             <i class="bi bi-house-door"></i> <!-- Home icon -->
         </a>
         Youth Spring - Empowering Nigerian Youth
@@ -75,7 +76,7 @@
         <section id="loan-info">
             <h2 class="section-title">Empowerment Loans Initiative</h2>
             <p class="text-center">
-                The Youth Spring Empowerment Loans Initiative provides interest-free, small-scale startup loans to youth and underprivileged individuals with viable ideas. This program aims to foster economic empowerment and self-sufficiency.
+                The Youth Spring Empowerment Loans Initiative provides interest-free, small-scale startup loans to youth and underprivileged individuals with viable ideas. This program aims to foster entrepreneurship and financial independence among Nigerian youth.
             </p>
             <p class="text-center">
                 <strong>Eligibility Criteria:</strong>
