--- a/pages/programs.html
+++ b/pages/programs.html
@@ -144,8 +144,8 @@
     <main>
         <section id="programs">
             <div class="container">
-              <center>  <h1>🌻 Youth Spring Programs</h1></center>
-               <center> <p>“Empowering the roots to bloom into the future.”</p></center>
+                <center><h1>🌻 Youth Spring Programs</h1></center>
+                <center><p>“Empowering the roots to bloom into the future.”</p></center>
 
                 <!-- Programs Grid -->
                 <div class="programs-grid">
@@ -161,7 +161,7 @@
                             <li>Monthly success stories and follow-ups</li>
                         </ul>
                         <p><strong>Tagline: “We don’t give handouts. We give hand-ups.”</strong></p>
-                        <button class="btn-join" data-bs-toggle="modal" data-bs-target="#joinModal">Join Program</button>
+                        <button class="btn-join" onclick="location.href='empowerment-loans.html'">Join Program</button>
                     </div>
                     <!-- Program 2 -->
                     <div class="program-card">
@@ -174,7 +174,7 @@
                             <li>Certification and starter kits for top participants</li>
                         </ul>
                         <p><strong>Tagline: “Learn. Build. Earn.”</strong></p>
-                        <button class="btn-join" data-bs-toggle="modal" data-bs-target="#joinModal">Join Program</button>
+                        <button class="btn-join" onclick="location.href='skill-spring.html'">Join Program</button>
                     </div>
                     <!-- Program 3 -->
                     <div class="program-card">
@@ -187,7 +187,7 @@
                             <li>Academic, character, and ambition considered</li>
                         </ul>
                         <p><strong>Tagline: “No dream should die because of tuition.”</strong></p>
-                        <button class="btn-join" data-bs-toggle="modal" data-bs-target="#joinModal">Join Program</button>
+                        <button class="btn-join" onclick="location.href='spring-scholars.html'">Join Program</button>
                     </div>
                     <!-- Program 4 -->
                     <div class="program-card">
@@ -200,7 +200,7 @@
                             <li>Mobilize youth volunteers to serve in their communities</li>
                         </ul>
                         <p><strong>Tagline: “The power of people helping people.”</strong></p>
-                        <button class="btn-join" data-bs-toggle="modal" data-bs-target="#joinModal">Join Program</button>
+                        <button class="btn-join" onclick="location.href='community-relief.html'">Join Program</button>
                     </div>
                     <!-- Program 5 -->
                     <div class="program-card">
@@ -213,7 +213,7 @@
                             <li>Street campaigns and community forums</li>
                         </ul>
                         <p><strong>Tagline: “Change starts with awareness.”</strong></p>
-                        <button class="btn-join" data-bs-toggle="modal" data-bs-target="#joinModal">Join Program</button>
+                        <button class="btn-join" onclick="location.href='awareness-advocacy.html'">Join Program</button>
                     </div>
                     <!-- Program 6 -->
                     <div class="program-card">
@@ -226,7 +226,7 @@
                             <li>Peer-to-peer business collaborations</li>
                         </ul>
                         <p><strong>Tagline: “You rise. You lift others.”</strong></p>
-                        <button class="btn-join" data-bs-toggle="modal" data-bs-target="#joinModal">Join Program</button>
+                        <button class="btn-join" onclick="location.href='youth-spring-network.html'">Join Program</button>
                     </div>
                 </div>
             </div>
