--- a/pages/apply-for-loan.html
+++ b/pages/apply-for-loan.html
@@ -65,7 +65,7 @@
     <!-- Header -->
     <div id="header">
         <a href="/" class="btn btn-dark">
-            <i class="bi bi-house-door"></i> <!-- Home icon -->
+            <i class="bi bi-house-door">🏠</i> <!-- Home icon -->
         </a>
         Youth Spring - Empowering Nigerian Youth
     </div>
