--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="6WklvarGbFY1As2HuzE4Rd0ENBWF6Hh9gDk-69yQ_mc" />
     <title>Youth Spring - Empowering Nigerian Youth</title>
+    <meta name="description" content="Youth Spring is a Nigerian NGO focused on empowering youth, providing interest-free loans, skill training, scholarships, and community development programs.">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
     <style>
         /* General Styles */
