--- a/pages/about.html
+++ b/pages/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us</title>
+    <meta name="description" content="Learn about Youth Spring, our mission, values, and how we are empowering Nigerian youth with resources, mentorship, and education.">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
     <style>
         /* General Styles */
