--- a/pages/apply-for-loan.html
+++ b/pages/apply-for-loan.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Get a Loan - Youth Spring</title>
+    <meta name="description" content="Apply for an interest-free empowerment loan with Youth Spring. We offer financial support for youth and underprivileged individuals with viable business ideas.">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.8.1/font/bootstrap-icons.min.css" rel="stylesheet">
     <style>
