--- a/pages/programs.html
+++ b/pages/programs.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programs</title>
+    <meta name="description" content="Discover Youth Spring's programs: Empowerment Loans, Skill Spring, Student Grants, Community Outreach, and more. Our initiatives aim to uplift Nigerian youth.">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
     <style>
         /* General Styles */
