--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us - Youth Spring</title>
+    <meta name="description" content="Get in touch with Youth Spring. Whether you want to apply for a loan, donate, or learn more about our programs, we're here to help.">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
     <style>
         /* General Styles */
