--- a/pages/donate.html
+++ b/pages/donate.html
@@ -1,1 +1,1 @@
-
+<meta name="description" content="Support Youth Spring's mission to empower Nigerian youth. Donate today and help provide loans, training, and mentorship to underprivileged individuals.">
