--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             background-color: #cc5500;
         }
         /* postbody */
-        #postbody{ 
+        #postbody { 
             font-size: 1.6em;
             text-align: center;
             flex: 1;
@@ -91,6 +91,14 @@
             bottom: 0;
             width: 100%;
         }
+        /* Image optimization for layout stability */
+        img {
+            max-width: 100%;
+            height: auto;
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
     </style>
 </head>
 <body>
@@ -98,13 +106,12 @@
     <div id="header">Youth Spring - Empowering Nigerian Youth</div>
     <!-- Navigation Grid -->
     <div class="nav-grid">
-    <a href="../index.html">Home</a>
-    <a href="pages/about.html">About Us</a>
-    <a href="pages/apply-for-loan.html">Get a Loan</a>
-    <a href="pages/donate.html">Donate</a>
-    <a href="pages/programs.html">Our programs</a>
-    
-</div>
+        <a href="../index.html">Home</a>
+        <a href="pages/about.html">About Us</a>
+        <a href="pages/apply-for-loan.html">Get a Loan</a>
+        <a href="pages/donate.html">Donate</a>
+        <a href="pages/programs.html">Our programs</a>
+    </div>
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
@@ -112,39 +119,36 @@
             <h1>Empowering Nigerian Youth & The Helpless</h1>
             <p>Together, we can create opportunities for a brighter future.</p>
             <p>
-
-"We are launching soon! Be among the first to support Nigeria’s youth."
-
-"The platform is under construction, but you can join our early supporters now!"
-
-"We’re building something BIG for Nigerian youth. Stay tuned!"
- </p>
+                "We are launching soon! Be among the first to support Nigeria’s youth."
+                "The platform is under construction, but you can join our early supporters now!"
+                "We’re building something BIG for Nigerian youth. Stay tuned!"
+            </p>
             <div class="text-center p-4">
-  <h2>🚀 T-minus <span id="countdown"></span> until we go live!</h2>
-</div>
+                <h2>🚀 T-minus <span id="countdown"></span> until we go live!</h2>
+            </div>
 
-<script>
-  const countdown = () => {
-    const launchDate = new Date("April 20, 2025 12:00:00").getTime();
-    const now = new Date().getTime();
-    const distance = launchDate - now;
+            <script>
+                const countdown = () => {
+                    const launchDate = new Date("April 20, 2025 12:00:00").getTime();
+                    const now = new Date().getTime();
+                    const distance = launchDate - now;
 
-    if (distance < 0) {
-      document.getElementById("countdown").innerHTML = "We are LIVE! 🎉";
-      return;
-    }
+                    if (distance < 0) {
+                        document.getElementById("countdown").innerHTML = "We are LIVE! 🎉";
+                        return;
+                    }
 
-    const days = Math.floor(distance / (1000 * 60 * 60 * 24));
-    const hours = Math.floor((distance / (1000 * 60 * 60)) % 24);
-    const mins = Math.floor((distance / (1000 * 60)) % 60);
-    const secs = Math.floor((distance / 1000) % 60);
+                    const days = Math.floor(distance / (1000 * 60 * 60 * 24));
+                    const hours = Math.floor((distance / (1000 * 60 * 60)) % 24);
+                    const mins = Math.floor((distance / (1000 * 60)) % 60);
+                    const secs = Math.floor((distance / 1000) % 60);
 
-    document.getElementById("countdown").innerHTML =
-      `${days}d ${hours}h ${mins}m ${secs}s`;
-  };
+                    document.getElementById("countdown").innerHTML =
+                        `${days}d ${hours}h ${mins}m ${secs}s`;
+                };
 
-  setInterval(countdown, 1000);
-</script>
+                setInterval(countdown, 1000);
+            </script>
 
             <a href="donate.html" class="btn btn-donate btn-lg">Support Our Cause</a>
         </div>
@@ -153,14 +157,14 @@
     <div id="postbody" class="container">
         <p>What God cannot do does not exist.</p>
         <p>Our mission is to provide financial assistance, educational resources, and community support to empower the youth of Nigeria.</p>
-        <img src="imagelink" class="img-fluid" alt="Empowering Nigerian Youth" style="max-width: 50%; height: auto;">
+        <img src="imagelink" class="img-fluid" alt="Empowering Nigerian Youth">
         <p>Join us in our journey to make a significant impact in the lives of young Nigerians.</p>
         <p>Stay informed about our upcoming events and initiatives by following our social media channels and subscribing to our newsletter.</p>
         <p>With your support, we can create a brighter future for the youth and helpless in Nigeria.</p>
     </div>
     <!-- Footer -->
     <div id="footer">© 2025 Youth Spring. All rights reserved.
-    <a href="pages/contact.html">Contact Us</a>    
+        <a href="pages/contact.html">Contact Us</a>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
