--- a/pages/about.html
+++ b/pages/about.html
@@ -96,14 +96,7 @@
     <!-- Header -->
     <div id="header">Youth Spring - Empowering Nigerian Youth</div>
     <!-- Navigation Grid -->
-    <div class="nav-grid">
-        <a href="../index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="apply-for-loan.html">Get a Loan</a>
-        <a href="donate.html">Donate</a>
-        <a href="programs.html">Our programs</a>
-        
-    </div>
+
     
     <!-- Main Content -->
     <main>
@@ -114,9 +107,21 @@
     </main>
 
     <!-- Footer -->
-    <div id="footer">
-        &copy; 2025 Youth Spring. All rights reserved.
-        <a href="contact.html">Contact Us</a>
-    </div>
+<!-- Footer Text (above bottom nav) -->
+<div class="text-center bg-light text-muted py-3" style="margin-bottom: 60px;">
+  © 2025 Youth Spring. All rights reserved. |
+  <a href="pages/contact.html" class="text-decoration-none">Contact Us</a>
+    <!-- Bottom Navigation with Icons Only -->
+<div class="bottom-nav d-flex justify-content-around align-items-center bg-warning p-2 fixed-bottom">
+  <a href="../index.html" class="text-dark fs-4"><i class="bi bi-house-fill"></i></a>
+  <a href="pages/about.html" class="text-dark fs-4"><i class="bi bi-info-circle-fill"></i></a>
+  <a href="pages/apply-for-loan.html" class="text-dark fs-4"><i class="bi bi-cash-coin"></i></a>
+  <a href="pages/donate.html" class="text-dark fs-4"><i class="bi bi-heart-fill"></i></a>
+  <a href="pages/programs.html" class="text-dark fs-4"><i class="bi bi-grid-fill"></i></a>
+</div>
+
+<!-- Bootstrap Icons CDN -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+</div>
 </body>
 </html>
