--- a/pages/about.html
+++ b/pages/about.html
@@ -79,6 +79,11 @@
             flex: 1;
             margin-bottom: 20px;
         }
+         .bottom-nav a {
+             flex: 1;
+             text-decoration: none;
+            }
+        
         /* Footer */
         #footer {
             background-color: #ffe066;
