--- a/pages/about.html
+++ b/pages/about.html
@@ -83,7 +83,10 @@
              flex: 1;
              text-decoration: none;
             }
-        
+        .nav-grid {
+    margin-bottom: 0;
+    padding-bottom: 10px;
+        }
         /* Footer */
         #footer {
             background-color: #ffe066;
