--- a/pages/about.html
+++ b/pages/about.html
@@ -6,6 +6,7 @@
     <title>About Us</title>
     <meta name="description" content="Learn about Youth Spring, our mission, values, and how we are empowering Nigerian youth with resources, mentorship, and education.">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <style>
         /* General Styles */
         body {
@@ -79,13 +80,29 @@
             flex: 1;
             margin-bottom: 20px;
         }
-         .bottom-nav a {
-             flex: 1;
-             text-decoration: none;
-            }
-        .nav-grid {
-    margin-bottom: 0;
-    padding-bottom: 10px;
+        /* Bottom Navigation */
+        .bottom-nav {
+            display: grid;
+            grid-template-columns: repeat(5, 1fr);
+            gap: 10px;
+            background-color: #ffe066;
+            padding: 15px;
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+        .bottom-nav a {
+            display: block;
+            background-color: #ff6600;
+            color: white;
+            padding: 10px;
+            border-radius: 5px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+        .bottom-nav a:hover {
+            background-color: #cc5500;
         }
         /* Footer */
         #footer {
@@ -94,9 +111,6 @@
             text-align: center;
             font-size: 1.4em;
             padding: 15px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
         }
     </style>
 </head>
@@ -104,8 +118,14 @@
     <!-- Header -->
     <div id="header">Youth Spring - Empowering Nigerian Youth</div>
     <!-- Navigation Grid -->
+    <div class="nav-grid">
+        <a href="../index.html">Home</a>
+        <a href="pages/about.html">About</a>
+        <a href="pages/apply-for-loan.html">Apply for Loan</a>
+        <a href="pages/donate.html">Donate</a>
+        <a href="pages/programs.html">Programs</a>
+    </div>
 
-    
     <!-- Main Content -->
     <main>
         <section id="about">
@@ -115,21 +135,22 @@
     </main>
 
     <!-- Footer -->
-<!-- Footer Text (above bottom nav) -->
-<div class="text-center bg-light text-muted py-3" style="margin-bottom: 60px;">
-  © 2025 Youth Spring. All rights reserved. |
-  <a href="pages/contact.html" class="text-decoration-none">Contact Us</a>
-    <!-- Bottom Navigation with Icons Only -->
-<div class="bottom-nav d-flex justify-content-around align-items-center bg-warning p-2 fixed-bottom">
-  <a href="../index.html" class="text-dark fs-4"><i class="bi bi-house-fill"></i></a>
-  <a href="pages/about.html" class="text-dark fs-4"><i class="bi bi-info-circle-fill"></i></a>
-  <a href="pages/apply-for-loan.html" class="text-dark fs-4"><i class="bi bi-cash-coin"></i></a>
-  <a href="pages/donate.html" class="text-dark fs-4"><i class="bi bi-heart-fill"></i></a>
-  <a href="pages/programs.html" class="text-dark fs-4"><i class="bi bi-grid-fill"></i></a>
-</div>
+    <!-- Footer Text (above bottom nav) -->
+    <div class="text-center bg-light text-muted py-3" style="margin-bottom: 60px;">
+        © 2025 Youth Spring. All rights reserved. |
+        <a href="pages/contact.html" class="text-decoration-none">Contact Us</a>
+    </div>
 
-<!-- Bootstrap Icons CDN -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-</div>
+    <!-- Bottom Navigation with Icons Only -->
+    <div class="bottom-nav">
+        <a href="../index.html" class="text-dark fs-4"><i class="bi bi-house-fill"></i></a>
+        <a href="pages/about.html" class="text-dark fs-4"><i class="bi bi-info-circle-fill"></i></a>
+        <a href="pages/apply-for-loan.html" class="text-dark fs-4"><i class="bi bi-cash-coin"></i></a>
+        <a href="pages/donate.html" class="text-dark fs-4"><i class="bi bi-heart-fill"></i></a>
+        <a href="pages/programs.html" class="text-dark fs-4"><i class="bi bi-grid-fill"></i></a>
+    </div>
+
+    <!-- Bootstrap Icons CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 </body>
 </html>
