--- a/pages/about.html
+++ b/pages/about.html
@@ -144,11 +144,11 @@
 
     <!-- Bottom Navigation with Icons Only -->
     <div class="bottom-nav">
-        <a href="../index.html" class="text-dark fs-4"><i class="bi bi-house-fill"></i></a>
-        <a href="pages/about.html" class="text-dark fs-4"><i class="bi bi-info-circle-fill"></i></a>
-        <a href="pages/apply-for-loan.html" class="text-dark fs-4"><i class="bi bi-cash-coin"></i></a>
-        <a href="pages/donate.html" class="text-dark fs-4"><i class="bi bi-heart-fill"></i></a>
-        <a href="pages/programs.html" class="text-dark fs-4"><i class="bi bi-grid-fill"></i></a>
+<a href="../index.html" class="text-dark fs-4"><i class="bi bi-house-fill"></i></a>
+<a href="about.html" class="text-dark fs-4"><i class="bi bi-info-circle-fill"></i></a>
+<a href="apply-for-loan.html" class="text-dark fs-4"><i class="bi bi-cash-coin"></i></a>
+<a href="donate.html" class="text-dark fs-4"><i class="bi bi-heart-fill"></i></a>
+<a href="programs.html" class="text-dark fs-4"><i class="bi bi-grid-fill"></i></a>
     </div>
 
     <!-- Bootstrap Icons CDN -->
