--- a/index.html
+++ b/index.html
@@ -80,6 +80,36 @@
             flex: 1;
             margin-bottom: 20px;
         }
+             /* Bottom Navigation */
+      .bottom-nav {
+    display: flex;
+    justify-content: center; /* Centers the buttons horizontally */
+    align-items: center;
+    gap: 32px; /* Adjust spacing between buttons */
+    background-color: #fdf6e3; 
+    padding: 10px 0; /* Adds some vertical padding */
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.bottom-nav a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 60px; /* Adjust size of buttons */
+    height: 60px;
+    background-color: #ff6600;
+    color: white;
+    border-radius: 40%; /* Makes them circular */
+    text-decoration: none;
+    font-size: 1.5em;
+}
+
+.bottom-nav a:hover {
+    background-color: #cc5500;
+    }
         /* Footer */
         #footer {
             background-color: #ffe066;
@@ -103,15 +133,13 @@
 </head>
 <body>
     <!-- Header -->
-    <div id="header">Youth Spring - Empowering Nigerian Youth</div>
-    <!-- Navigation Grid -->
-    <div class="nav-grid">
-        <a href="../index.html">Home</a>
-        <a href="pages/about.html">About Us</a>
-        <a href="pages/apply-for-loan.html">Get a Loan</a>
-        <a href="pages/donate.html">Donate</a>
-        <a href="pages/programs.html">Our programs</a>
+    <div id="header">Youth Spring - Empowering Nigerian Youth.
+        <div id="footer">© 2025 Youth Spring. All rights reserved.
+        <a href="pages/contact.html">Contact Us</a>
+        </div>
     </div>
+    <!-- Navigation Grid -->
+    
     <!-- Hero Section -->
     <section class="hero">
         <div class="container">
@@ -163,10 +191,19 @@
         <p>With your support, we can create a brighter future for the youth and helpless in Nigeria.</p>
     </div>
     <!-- Footer -->
-    <div id="footer">© 2025 Youth Spring. All rights reserved.
-        <a href="pages/contact.html">Contact Us</a>
-    </div>
+    
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+    <!-- Bottom Navigation with Icons Only -->
+    <div class="bottom-nav">
+<a href="../index.html" class="text-dark fs-4"><i class="bi bi-house-fill"></i></a>
+<a href="about.html" class="text-dark fs-4"><i class="bi bi-info-circle-fill"></i></a>
+<a href="apply-for-loan.html" class="text-dark fs-4"><i class="bi bi-cash-coin"></i></a>
+<a href="donate.html" class="text-dark fs-4"><i class="bi bi-heart-fill"></i></a>
+<a href="programs.html" class="text-dark fs-4"><i class="bi bi-grid-fill"></i></a>
+    </div>
+
+    <!-- Bootstrap Icons CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 </body>
 </html>
