--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 <body>
     <!-- Header -->
     <div id="header">Youth Spring - Empowering Nigerian Youth.
-        <div id="footer">© 2025 Youth Spring. All rights reserved.
+        <div>© 2025 Youth Spring. All rights reserved.
         <a href="pages/contact.html">Contact Us</a>
         </div>
     </div>
@@ -197,10 +197,10 @@
     <!-- Bottom Navigation with Icons Only -->
     <div class="bottom-nav">
 <a href="../index.html" class="text-dark fs-4"><i class="bi bi-house-fill"></i></a>
-<a href="about.html" class="text-dark fs-4"><i class="bi bi-info-circle-fill"></i></a>
-<a href="apply-for-loan.html" class="text-dark fs-4"><i class="bi bi-cash-coin"></i></a>
-<a href="donate.html" class="text-dark fs-4"><i class="bi bi-heart-fill"></i></a>
-<a href="programs.html" class="text-dark fs-4"><i class="bi bi-grid-fill"></i></a>
+<a href="pages/about.html" class="text-dark fs-4"><i class="bi bi-info-circle-fill"></i></a>
+<a href="pages/apply-for-loan.html" class="text-dark fs-4"><i class="bi bi-cash-coin"></i></a>
+<a href="pages/donate.html" class="text-dark fs-4"><i class="bi bi-heart-fill"></i></a>
+<a href="pages/programs.html" class="text-dark fs-4"><i class="bi bi-grid-fill"></i></a>
     </div>
 
     <!-- Bootstrap Icons CDN -->
