--- a/pages/apply-for-loan.html
+++ b/pages/apply-for-loan.html
@@ -201,5 +201,16 @@
 
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
+    <!-- Bottom Navigation with Icons Only -->
+    <div class="bottom-nav">
+<a href="../index.html" class="text-dark fs-4"><i class="bi bi-house-fill"></i></a>
+<a href="about.html" class="text-dark fs-4"><i class="bi bi-info-circle-fill"></i></a>
+<a href="apply-for-loan.html" class="text-dark fs-4"><i class="bi bi-cash-coin"></i></a>
+<a href="donate.html" class="text-dark fs-4"><i class="bi bi-heart-fill"></i></a>
+<a href="programs.html" class="text-dark fs-4"><i class="bi bi-grid-fill"></i></a>
+    </div>
+
+    <!-- Bootstrap Icons CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
 </body>
 </html>
