--- a/pages/apply-for-loan.html
+++ b/pages/apply-for-loan.html
@@ -36,6 +36,7 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             padding: 30px;
             text-align: center; /* Centered container */
+            margin: 70px;
         }
         .loan-form .form-control {
             margin-bottom: 15px;
