--- a/pages/spring-scholars.html
+++ b/pages/spring-scholars.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>spring-scholars</title>
-    <meta name="description" content="......">
+    <meta name="description" content="Discover the Youth Spring Scholars program, dedicated to empowering Nigerian youth through education and opportunities. Learn more about our mission and how you can get involved.">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
