--- a/pages/skill-spring.html
+++ b/pages/skill-spring.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
-    <meta name="description" content="Learn about Youth Spring, our mission, values, and how we are empowering Nigerian youth with resources, mentorship, and education.">
+    <title>skills</title>
+    <meta name="description" content="Discover the Youth Spring skill programs, dedicated to empowering Nigerian youth through education and opportunities. Learn more about our mission and how you can get involved.">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <!-- Header -->
