--- a/pages/programs.html
+++ b/pages/programs.html
@@ -87,6 +87,7 @@
             padding: 20px;
             text-align: center;
             transition: transform 0.3s ease;
+            margin: 70px
         }
         .program-card:hover {
             transform: translateY(-10px);
@@ -97,11 +98,11 @@
             margin-bottom: 20px;
         }
         .program-card h3 {
-            font-size: 1.6em;
+            font-size: 1.4em;
             color: #ff6600;
         }
         .program-card p {
-            font-size: 1.2em;
+            font-size: 1.3em;
             margin-bottom: 20px;
         }
         .btn-join {
@@ -109,7 +110,7 @@
             color: white;
             padding: 10px 20px;
             font-size: 1.2em;
-            border-radius: 5px;
+            border-radius: 8px;
             text-decoration: none;
         }
         .btn-join:hover {
