--- a/pages/programs.html
+++ b/pages/programs.html
@@ -87,7 +87,8 @@
             padding: 20px;
             text-align: center;
             transition: transform 0.3s ease;
-            margin: 70px
+            height: 
+            
         }
         .program-card:hover {
             transform: translateY(-10px);
@@ -95,7 +96,7 @@
         .program-card img {
             max-width: 100%;
             border-radius: 8px;
-            margin-bottom: 20px;
+            margin-bottom: 70px;
         }
         .program-card h3 {
             font-size: 1.4em;
