--- a/pages/programs.html
+++ b/pages/programs.html
@@ -87,7 +87,7 @@
             padding: 20px;
             text-align: center;
             transition: transform 0.3s ease;
-            height: 600px
+            height: 600px;
             
         }
         .program-card:hover {
