--- a/dashboard/pages/sign-up.html
+++ b/dashboard/pages/sign-up.html
@@ -234,6 +234,30 @@
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <!-- Control Center for Soft Dashboard: parallax effects, scripts for the example pages etc -->
   <script src="../assets/js/argon-dashboard.min.js?v=2.1.0"></script>
+  <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-app.js";
+  import { getAnalytics } from "https://www.gstatic.com/firebasejs/11.6.0/firebase-analytics.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+  const firebaseConfig = {
+    apiKey: "AIzaSyD3mvLJORKunKc5HjLh73NJ1SkByp6797c",
+    authDomain: "youthspring-af954.firebaseapp.com",
+    databaseURL: "https://youthspring-af954-default-rtdb.firebaseio.com",
+    projectId: "youthspring-af954",
+    storageBucket: "youthspring-af954.firebasestorage.app",
+    messagingSenderId: "190059933611",
+    appId: "1:190059933611:web:871f54b6d282452337acee",
+    measurementId: "G-24SVNJJKDC"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+  const analytics = getAnalytics(app);
+</script>
 </body>
 
 </html>
