--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Youth Spring - Empowering Nigerian Youth</title>
     <meta name="description" content="Youth Spring is a Nigerian NGO focused on empowering youth, providing interest-free loans, skill training, scholarships, and community development programs.">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/5.1.3/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://demos.creative-tim.com/argon-dashboard-pro/assets/css/nucleo-icons.css" rel="stylesheet" />
+    <link href="https://demos.creative-tim.com/argon-dashboard-pro/assets/css/nucleo-svg.css" rel="stylesheet" />
+    <link rel="apple-touch-icon" sizes="76x76" href="dashboard/assets/img/favicon.png">
+    <link rel="icon" type="image/png" href="dashboard/assets/img/favicon.png">
     <style>
         /* General Styles */
         body {
